This file documents the revision history for UFL::Phonebook.

0.24
        - Direct links to private pages now go to the right place
          instead of redirecting to the private home page (#3)
        - Fix poor URI construction for private instance (#2)
        - Configuration change: Controller::Authentication's
          authenticated_uri becomes authenticated_path_segments

0.23  Mon Dec  3 19:01:32 EST 2007
        - Refactor common searching and results code to
          ::BaseController
        - Disallow searches when SASL is configured but no Catalyst
          user is found
        - Rely more on $ENV{KRB5CCNAME} instead of trying to fake it
        - Update root/people/view.tt to reflect LDAP data moving
          around
        - Add homePostalAddress to list of inflations on ::Entry
        - Redirect to previous location on login

0.22  Fri Oct 19 12:51:11 EDT 2007
        - Say "Not Available" instead of "Unknown" for search results

0.21  Thu Oct 18 19:41:42 EDT 2007
        - Add a few missing (mostly core) modules to Makefile.PL
        - Add tests of LDAP ACLs
        - Improve handling of environment-based authentication for
          REMOTE_USER on mod_fastcgi
        - ::Controller::Authentication: Rename configuration paramter
          for redirecting to private version from redirect_to to
          authenticated_uri
        - ::LDAP::Connection: Rewrite to avoid issues with incorrect
          file descriptors when running in FastCGI
        - ::LDAP::Connection: Use the Kerberos credential cache
          instead of a separate lock file to determine when to kinit
        - In /units/people, use stashed unit for page title instead of
          relying on a field that the person might not have

0.20  Fri Aug 24 18:04:29 EDT 2007
        - Rename from Phonebook to UFL::Phonebook
        - Switch to Catalyst::Plugin::ConfigLoader
        - Move actions from application to ::Controller::Root