@@ -8,7 +8,7 @@ requires 'Carp';
 requires 'Catalyst' => '5.7006';
 requires 'Catalyst::Action::RenderView';
 requires 'Catalyst::Model::LDAP' => '0.16';
-requires 'Catalyst::Plugin::Authentication' => '0.10002';
+requires 'Catalyst::Plugin::Authentication' => '0.10003';  # Store::Null
 requires 'Catalyst::Plugin::ConfigLoader';
 requires 'Catalyst::Plugin::Session';
 requires 'Catalyst::Plugin::Session::State::Cookie';
